<resources>
    <string name="app_name">InsuranceCalculator</string>
    <string name="age">Age:</string>
    <string name="title">Insurance Premium Calculator</string>
    <string name="gender">Gender:</string>
    <string name="smoker">Smoker:</string>
    <string name="total">Total:</string>
    <string name="checkstatus">Yes</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string-array name="list">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
    </string-array>
</resources>
