<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbltitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbltitle" />

            <TextView
                android:id="@+id/lblgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblage" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="32dp"
                android:entries="@array/list"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@+id/lblage"
                app:layout_constraintTop_toBottomOf="@+id/lbltitle" />

            <Button
                android:id="@+id/btnCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="32dp"
                android:text="@string/calculate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbltotal" />

            <Button
                android:id="@+id/btnreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="32dp"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCal"
                app:layout_constraintTop_toBottomOf="@+id/lblresult" />

            <TextView
                android:id="@+id/lblsmoker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:text="@string/smoker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblgender" />

            <CheckBox
                android:id="@+id/chkyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="12dp"
                android:text="@string/checkstatus"
                app:layout_constraintStart_toEndOf="@+id/lblsmoker"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

            <TextView
                android:id="@+id/lbltotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblsmoker" />

            <TextView
                android:id="@+id/lblresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/lbltotal"
                app:layout_constraintTop_toBottomOf="@+id/chkyes" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="200dp"
                android:layout_height="63dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toEndOf="@+id/lblgender"
                app:layout_constraintTop_toBottomOf="@+id/spinner">

                <RadioButton
                    android:id="@+id/rdmale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radfemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>